--- a/res/layout/recommendcolumn_item.xml
+++ b/res/layout/recommendcolumn_item.xml
@@ -10,5 +10,19 @@
 		android:id="@+id/tv2" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:textSize="14dip"
 		android:textColor="@color/gray" android:singleLine="true"/>
+		
+	<TextView
+		android:id="@+id/textView_title" android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+	<TextView
+		android:id="@+id/textView_message" android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+	<Button android:text="开始" 
+		android:id="@+id/button_download_start_or_pause" android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+	<Button android:text="取消"  android:visibility="gone"
+		android:id="@+id/button_download_cancel" android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+	<ProgressBar android:id="@+id/progressBar_downLoad" android:visibility="gone"
+		android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 </LinearLayout>
-
