--- a/res/layout/twelve_key_dialer.xml
+++ b/res/layout/twelve_key_dialer.xml
@@ -8,7 +8,7 @@
 		android:textColor="@color/bright_foreground_dark" android:editable="true"
 		android:background="@drawable/btn_dial_textfield" android:freezesText="true"
 		android:maxLines="1" android:maxLength="21" android:textSize="33sp"
-		android:layout_height="67dip" android:layout_width="fill_parent"
+		android:layout_height="67dip" android:layout_width="fill_parent" android:gravity="center_horizontal"
 		/>
 	
 	<TextView android:id="@+id/dial_prompt" android:layout_width="fill_parent"
