--- a/res/layout/recommendcolumn_item.xml
+++ b/res/layout/recommendcolumn_item.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
+	android:orientation="horizontal" android:layout_width="fill_parent"
 	android:layout_height="wrap_content">
-	<TextView android:text="" android:id="@+id/tv1"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:textSize="20dip" />
-	<TextView
-		android:text=""
-		android:id="@+id/tv2" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:textSize="14dip"
-		android:textColor="@color/gray" android:singleLine="true"/>
-		
-	<TextView
-		android:id="@+id/textView_title" android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
-	<TextView
-		android:id="@+id/textView_message" android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
-	<Button android:text="开始" 
-		android:id="@+id/button_download_start_or_pause" android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
-	<Button android:text="取消"  android:visibility="gone"
-		android:id="@+id/button_download_cancel" android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
-	<ProgressBar android:id="@+id/progressBar_downLoad" android:visibility="gone"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+	<ImageView android:layout_width="wrap_content" android:paddingTop="15dip"
+		android:layout_height="wrap_content" android:src="@drawable/icon"></ImageView>
+	<LinearLayout android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:orientation="vertical"
+		android:paddingTop="15dip">
+		<TextView android:text="test" android:id="@+id/textView_title"
+			android:layout_width="180dip" android:layout_height="wrap_content"
+			android:textSize="20dip" />
+		<ProgressBar android:max="100" android:id="@+id/progressBar_downLoad"
+			style="?android:attr/progressBarStyleHorizontal" android:visibility="gone"
+			android:layout_width="180dip" android:layout_height="10dip"></ProgressBar>
+		<TextView android:id="@+id/textView_message"
+			android:layout_width="180dip" android:layout_height="wrap_content"
+			android:textSize="14dip" android:textColor="@color/gray"
+			android:singleLine="true" />
+	</LinearLayout>
+	<LinearLayout android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:orientation="horizontal"
+		android:layout_gravity="center_vertical">
+		<ImageView android:layout_width="wrap_content"
+			android:layout_marginLeft="5dip" android:id="@+id/button_download_start_or_pause"
+			android:layout_height="wrap_content" android:src="@drawable/download_start"></ImageView>
+		<ImageView android:layout_width="wrap_content"
+			android:layout_marginLeft="15dip" android:layout_gravity="right"
+			android:id="@+id/button_download_cancel" android:layout_height="wrap_content"
+			android:src="@drawable/download_cancel" android:visibility="gone"></ImageView>
+		<ImageView android:layout_width="wrap_content"
+			android:layout_marginLeft="15dip" android:layout_gravity="right"
+			android:id="@+id/button_download_install" android:layout_height="wrap_content"
+			android:src="@drawable/download_install" android:visibility="gone"></ImageView>
+	</LinearLayout>
 </LinearLayout>
